Added projects components

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,3 +2,4 @@
 @import './components/header/headerComp.scss';
 @import './components/footer/footer.scss';
 @import './components/content/services.scss';
+@import './components/content/project.scss';
