--- a/src/components/content/services.scss
+++ b/src/components/content/services.scss
@@ -1,6 +1,8 @@
-.services-details {
+.services-details,
+.project-details-main {
   margin: 50px 0;
-  .service-text {
+  .service-text,
+  .project-text {
     font-size: 24px;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
