--- a/src/components/content/project.scss
+++ b/src/components/content/project.scss
@@ -15,9 +15,9 @@
   }
 }
 
-:where(.css-dev-only-do-not-override-11lehqq).ant-tabs .ant-tabs-tab {
+.ant-tabs .ant-tabs-tab {
   color: #fdd291 !important;
 }
-:where(.css-dev-only-do-not-override-11lehqq).ant-tabs-card > .ant-tabs-nav .ant-tabs-tab-active {
+.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab-active {
   color: #fdd291 !important;
 }
