fixed project tab css

--- a/src/components/content/project.scss
+++ b/src/components/content/project.scss
@@ -21,3 +21,9 @@
 .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab-active {
   color: #fdd291 !important;
 }
+
+@media only screen and (max-width: 768px) {
+  .ant-tabs-centered > .ant-tabs-nav .ant-tabs-nav-wrap:not([class*='.ant-tabs-nav-wrap-ping']) {
+    justify-content: unset !important;
+  }
+}
