--- a/src/components/content/services.scss
+++ b/src/components/content/services.scss
@@ -32,6 +32,7 @@
         font-size: 16px;
         font-weight: 600;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
       }
       .section-img {
         width: 40px;
